--- a/index.html
+++ b/index.html
@@ -368,6 +368,22 @@
                         </div>
                     </div>
                 </div>
+                
+                <div class="card">
+                    <div class="card-header" id="heading15">
+                        <h5 class="mb-0">
+                            <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#vraag15" aria-expanded="false" aria-controls="vraag15">
+                                Vraag 15: Ik moet zeer gedetailleerde dingen zien op mijn beeldscherm.
+                            </button>
+                        </h5>
+                    </div>
+                    <div id="vraag15" class="collapse" aria-labelledby="heading15" data-parent="#accordion">
+                        <div class="card-body">
+                            <p>Deze vraag heeft betrekking tot de pixel dichtheid of PPI (pixels per inch). Een scherm is opgebouwd uit pixels. Dit zijn allemaal kleine punten op het scherm die allemaal een andere kleur hebben en zo het beeld gaan vormen op je scherm. Hoe lager de resolutie is, hoe minder van deze punten er zijn. Dit zorgt ervoor dat een bepaalde afbeelding gevormd moet gaan worden met veel minder punten, waardoor deze minder scherp zal zijn. Deze pixel dichtheid geeft dan aan hoeveel pixels er per inch weergegeven zullen worden. Hoe hoger dit cijfer is, hoe scherper het beeld zal zijn! Bv. van 0-95 zal een wazig scherm geven, terwijl een pixel dichtheid van 140+ kristalhelder zal zijn! Deze worden beschreven als het neusje van de zalm. In de foto hieronder zie je ook dat de bloem telkens beter en beter wordt weergegeven dankzij deze pixeldichtheid: </p>
+                            <img src="images/ppi.png" height="50%" width="50%">
+                        </div>
+                    </div>
+                </div>
 
             </div>
         </div>
