--- a/index.html
+++ b/index.html
@@ -519,7 +519,7 @@
                     </div>
                     <div id="vraag23" class="collapse" aria-labelledby="heading23" data-parent="#accordion">
                         <div class="card-body">
-                            <p>Tijd om even een bommetje te laten vallen. Wist je al dat een toetsenbord vuiler is dan een wc-bril? Om het nog veel erger te maken heeft een toetsenbord 400 keer meer bacteriën dan een wc-bril. Dit is wat de universiteit van Arizona heeft onderzocht! Dit is dus allesbehalve proper. Veel van die bacteriën komen ook gewoon van je handen. Nu wordt er momenteel toch veel ontsmet. Toch is dit in deze onzekere tijden omtrent Corona niet fijn om te horen. Het is dus perfect mogelijk dat je dit vies vindt om te gebruiken.</p>
+                            <p>Tijd om even een bommetje te laten vallen. Wist je al dat een toetsenbord vuiler is dan een wc-bril? Om het nog veel erger te maken heeft een toetsenbord 400 keer meer bacteriën dan een wc-bril. Dit is wat de universiteit van Arizona heeft onderzocht! Dit is dus allesbehalve proper. Veel van die bacteriën komen ook gewoon van je handen. Nu wordt er momenteel al veel ontsmet. Toch is dit in deze onzekere tijden omtrent Corona niet fijn om te horen. Het is dus perfect mogelijk dat je dit vies vindt om te gebruiken.</p>
                         </div>
                     </div>
                 </div>
@@ -534,7 +534,7 @@
                     </div>
                     <div id="vraag24" class="collapse" aria-labelledby="heading24" data-parent="#accordion">
                         <div class="card-body">
-                            <p>Het BYOD principe is de laatste jaren veel gebruikt! In hogescholen is dit een al veel gebruikt principe waarbij studenten hun eigen laptop en spullen meenemen naar de les. Zo gebruikt iedereen zijn eigen spullen. Qua hygiëne is dit een hele stap voorwaarts aangezien je enkel je eigen muis, toetsenbord en hoofdtelefoon gebruikt. Vandaar de vraag of jij hier interesse in hebt! <span class="vet">Natuurlijk zijn we geen onmensen en moet je zelf dit materiaal niet aankopen een meenemen!</span> Het is dan de bedoeling dat dit materiaal ter plekke beschikbaar is. Wanneer je dan aankomt op je shift kan je bv. je materiaal uit de kast nemen en aansluiten op de computer. Enkel jij raakt dan dit materiaal aan. Iedereen zou dan ook hetzelfde materiaal krijgen! Ook geen paniek als je niet direct weet hoe je dit materiaal aansluit. Er staan altijd mensen klaar om te helpen!</p>
+                            <p>Het BYOD principe is de laatste jaren veel gebruikt! In hogescholen is dit een al veel gebruikt principe waarbij studenten hun eigen laptop en spullen meenemen naar de les. Zo gebruikt iedereen dus zijn eigen spullen. Qua hygiëne is dit een hele stap voorwaarts aangezien je enkel je eigen muis, toetsenbord en hoofdtelefoon gebruikt. Vandaar de vraag of jij hier interesse in hebt! <span class="vet">Natuurlijk zijn we geen onmensen en moet je zelf dit materiaal niet aankopen en meenemen!</span> Het is dan de bedoeling dat dit materiaal ter plekke beschikbaar is. Wanneer je dan aankomt op je shift, kan je bv. je materiaal uit de kast nemen en aansluiten op de computer. Enkel jij raakt dan dit materiaal aan. Iedereen zou dan ook hetzelfde materiaal krijgen! Ook geen paniek als je niet direct weet hoe je dit materiaal aansluit. Er staan altijd mensen klaar om te helpen!</p>
                         </div>
                     </div>
                 </div>
@@ -550,9 +550,9 @@
                     <div id="vraag25" class="collapse" aria-labelledby="heading25" data-parent="#accordion">
                         <div class="card-body">
                             <p>Een wattes toetsenbord? Ik kan goed begrijpen dat je momenteel toch eens goed door je haar moet krabben bij het horen van die nonsens. Toch zijn dit bekende termen binnen de IT wereld. Het gaat hier over de indeling van je toetsenbord. Als je linksboven kijkt naar de eerste 6 letters zie je of A Z E R T Y of Q W E R T Y. De kans is groot dat je azerty ziet. Dit is namelijk de indeling die gemaakt wordt op Belgische of Franse toetsenborden. Als je een Amerikaans toetsenbord hebt, gebruik je qwerty. Deze vraag is vooral gericht naar gemak. De layout van het toetsenbord zal bij beide versies dan ook wat verschillen.</p>
-                            <p>Mijn azerty toetsenbord: </p>
+                            <p class="vet">Mijn azerty toetsenbord: </p>
                             <img src="images/azerty.jpg" height="50%" width="50%">
-                            <p class="mt-3">Een qwerty toetsenbord: </p>
+                            <p class="mt-3 vet">Een qwerty toetsenbord: </p>
                             <img src="images/qwerty.jpg">
                         </div>
                     </div>
@@ -569,9 +569,9 @@
                     <div id="vraag26" class="collapse" aria-labelledby="heading26" data-parent="#accordion">
                         <div class="card-body">
                             <p>Toetsenborden komen in alle vormen en maten. Zo heb je toetsenborden waarbij de toetsen hard uit het toetsenbord komen en toetsenborden waarbij de toetsen redelijk vlak en plat zijn. Platte toetsen betekenen dus dat de toetsen voornamelijk laag zullen liggen en niet uit het toetsenbord komen. Je handen komen lager te liggen en kans op RSI wordt hierdoor verlaagd. Dit is een aandoening waarbij je spierpijn en dergelijke krijgt van repetitieve taken uit te voeren. Ook zullen de toetsen veel minder lawaai maken als je ze aanslaat! Dit is ook positief voor een stille omgeving dus!</p>
-                            <p>Platte toetsen: </p>
+                            <p class="vet">Platte toetsen: </p>
                             <img src="images/plat_toetsenbord.jpg" height="50%" width="50%">
-                            <p class="mt-3">Hoge toetsen: </p>
+                            <p class="mt-3 vet">Hoge toetsen: </p>
                             <img src="images/hoge_toetsen.jpg" height="50%" width="50%">
                         </div>
                     </div>
@@ -602,7 +602,7 @@
                     </div>
                     <div id="vraag28" class="collapse" aria-labelledby="heading28" data-parent="#accordion">
                         <div class="card-body">
-                            <p>We hebben al gezien dat er veel verschillen zijn in de wereld der toetsenborden. Deze vraag heeft dan ook betrekking tot het soort toetsen. Je hebt 2 soorten hier: een membraan toetsenbord of een mechanisch toetsenbord. Een membraan toetsenbord is wellicht het toetsenbord dat u zelf gebruikt! Dit heeft de gewone toetsen en doet eigenlijk helemaal niets speciaal. Het wordt pas speciaal wanneer we kijken naar het mechanische toetsenbord! Typerend aan dit toetsenbord is het harde, klakkende geluid dat een toets maakt wanneer het ingedrukt wordt! Wel... Waarom zou je in hemelsnaam dan kiezen voor dit mechanische toetsenbord? Goede vraag! Bij een mechanisch toetsenbord hoef je de toets niet volledig in te drukken voor deze geregistreerd wordt! Dit heeft met andere woorden een lichtere toetsaanslag dan een membraan toetsenbord. Ergonomisch is dit dus een groot voordeel aangezien dit ook lichamelijke klachten zou kunnen voorkomen. Toch is dit verschil ook niet zo bijster groot! Een mechanisch toetsenbord zal ook bij elke toetsaanslag een klakkend geluid maken. Hieronder een voorbeeld. Vergeet zeker niet te luisteren met geluid op!</p>
+                            <p>We hebben al gezien dat er veel verschillen zijn in de wereld der toetsenborden. Deze vraag heeft dan ook betrekking tot het soort toetsen. Je hebt 2 soorten hier: een membraan toetsenbord of een mechanisch toetsenbord. Een membraan toetsenbord is wellicht het toetsenbord dat u zelf gebruikt! Dit heeft de gewone toetsen en doet eigenlijk helemaal niets speciaal. Het wordt pas speciaal wanneer we kijken naar het mechanische toetsenbord! Typerend aan dit toetsenbord is het harde, klakkende geluid dat een toets maakt wanneer het ingedrukt wordt! Wel... Waarom zou je in hemelsnaam dan kiezen voor dit mechanische toetsenbord? Goede vraag! Bij een mechanisch toetsenbord hoef je de toets niet volledig in te drukken voor deze geregistreerd wordt en op het scherm verschijnt! Dit heeft met andere woorden een lichtere toetsaanslag dan een membraan toetsenbord. Ergonomisch is dit dus een groot voordeel aangezien dit ook lichamelijke klachten zou kunnen voorkomen. Toch is dit verschil ook niet zo bijster groot! Een mechanisch toetsenbord zal ook bij elke toetsaanslag een klakkend geluid maken. Iedereen zal je in de buurt dus horen typen! Hieronder een voorbeeld. Vergeet zeker niet te luisteren met geluid op!</p>
                             <iframe width="560" height="315" src="https://www.youtube.com/embed/sbiCLHJgj1U" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                         </div>
                     </div>
@@ -618,10 +618,10 @@
                     </div>
                     <div id="vraag29" class="collapse" aria-labelledby="heading29" data-parent="#accordion">
                         <div class="card-body">
-                            <p>Ik moet natuurlijk niet vertellen dat het werk van een dispatcher ooit stopt. We weten allemaal goed dat ook tijdens de nacht mensen paraat staan! Hierdoor is het interessant om te kijken naar de optie voor een verlicht toetsenbord. Velen beschikken niet over de mogelijkheid om blind te kunnen typen! En zelfs dan is dit nog niet ideaal om in de donkere of in het schemerlicht de toetsen te zoeken. Een oplossing hiervoor is het verlicht toetsenbord! Met een klik op een knop (of een toetsencombinatie) zou u op dit soort toetsenbord het licht kunnen aandoen. Ook hier zijn weer verschillende opties die gaan van alle kleuren tot de regenboog tot een enkele kleur voor het hele toetsenbord. </p>
-                            <p>Voorbeeld van een toetsenbord dat een andere kleur per toets kan hebben: </p>
+                            <p>Ik moet natuurlijk niet vertellen dat het werk van een dispatcher nooit stopt. We weten allemaal goed dat ook tijdens de nacht mensen paraat staan! Hierdoor is het interessant om te kijken naar de optie voor een verlicht toetsenbord. Velen beschikken niet over de mogelijkheid om blind te kunnen typen! En zelfs dan is dit nog niet ideaal om in de donkere of in het schemerlicht de toetsen te zoeken. Een oplossing hiervoor is het verlicht toetsenbord! Met een klik op een knop (of een toetsencombinatie) zou u op dit soort toetsenbord het licht kunnen aandoen. Ook hier zijn weer verschillende opties die gaan van alle kleuren tot de regenboog tot een enkele kleur voor het hele toetsenbord. </p>
+                            <p class="vet">Voorbeeld van een toetsenbord dat een andere kleur per toets kan hebben: </p>
                             <img src="images/gekleurde_toetsen.jpg" height="50%" width="50%">
-                            <p class="mt-3">Een video van mijn toetsenbord dat slechts 1 kleur heeft: </p>
+                            <p class="mt-3 vet">Een video van mijn toetsenbord dat slechts 1 kleur heeft: </p>
                             <video width="25%" height="25%" controls>
                                 <source src="videos/gekleurd_toetsenbord.mp4" type="video/mp4">
                             </video>
